# OuterTune

./: .gitignore  ANALYSIS_REPORT.md  CONTRIBUTING.md  DESIGN.md  INDEX.md  INTEGRATION_GUIDE.md  NEW_FEATURES.md  PODCAST_DOWNLOAD_FEATURE.md  PR_TEMPLATE.md  QUICK_START.md  QUICK_START.txt  README.md  README_CONTRIBUTION.md  README_ja.md  build.gradle.kts  gradle.properties  outerconnect_sync_process.txt  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  build_ot_pre_release.yml  build_ot_release.yml  podcast_apk.yml  test_original.yml
airplay-bridge/: Cargo.toml  README.md  build-android.sh
airplay-bridge/src/: airplay.rs  audio.rs  discovery.rs  lib.rs
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.dd3boh.outertune.db.InternalDatabase/: 20.json
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: tv_banner.xml
app/src/main/res/values-ar/: strings-ot.xml
app/src/main/res/values-az/: strings-ot.xml
app/src/main/res/values-bg/: strings-ot.xml
app/src/main/res/values-ca/: strings-ot.xml
app/src/main/res/values-ca@valencia/: strings-ot.xml
app/src/main/res/values-de/: strings-ot.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/fil/: short_description.txt
gradle/: libs.versions.toml
innertube/: build.gradle.kts
lrclib/: build.gradle.kts
material-color-utilities/: build.gradle.kts
nowPlaying-compat/: build.gradle.kts
nowPlaying-compat/src/main/: AndroidManifest.xml
prebuilt/: README.md
(+183 files in other folders)
